--- a/FrontEnd/echooling/package.json
+++ b/FrontEnd/echooling/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-macros": "^3.1.0",
     "formik": "^2.4.3",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-rating": "^2.0.5",
