--- a/BackEnd/Echooling/src/Core/Ecooling.Domain/Ecooling.Domain.csproj
+++ b/BackEnd/Echooling/src/Core/Ecooling.Domain/Ecooling.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Enums\" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.20" />
   </ItemGroup>
 
 </Project>
