--- a/BackEnd/Echooling/src/Infrastructure/Echooling.Persistance/Echooling.Persistance.csproj
+++ b/BackEnd/Echooling/src/Infrastructure/Echooling.Persistance/Echooling.Persistance.csproj
@@ -13,8 +13,10 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="MailKit" Version="4.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.21" />
+    <PackageReference Include="MimeKit" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
