--- a/FrontEnd/echooling/package.json
+++ b/FrontEnd/echooling/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
     "formik": "^2.4.3",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
