--- a/BackEnd/Echooling/src/Infrastructure/Echooling.Infrastructure/Echooling.Infrastructure.csproj
+++ b/BackEnd/Echooling/src/Infrastructure/Echooling.Infrastructure/Echooling.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.21" />
     <PackageReference Include="MimeKit" Version="4.1.0" />
   </ItemGroup>
 
