--- a/BackEnd/Echooling/src/Infrastructure/Echooling.Persistance/Echooling.Persistance.csproj
+++ b/BackEnd/Echooling/src/Infrastructure/Echooling.Persistance/Echooling.Persistance.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.21" />
     <PackageReference Include="MimeKit" Version="4.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Xabe.FFmpeg" Version="5.2.6" />
   </ItemGroup>
 
 </Project>
