--- a/BackEnd/Echooling/src/Presentation/Echooling.API/Echooling.API.csproj
+++ b/BackEnd/Echooling/src/Presentation/Echooling.API/Echooling.API.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Xabe.FFmpeg" Version="5.2.6" />
   </ItemGroup>
 
   <ItemGroup>
